# quant_agent

./: .aiexclude  .dockerignore  .env.example  .env.slave.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AI_INSTRUCTIONS.md  CHANGELOG.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  Dockerfile.data-node  FUTU_API_VALUE_FORMAT_DIAGNOSIS.md  LEARNING_JOURNAL_2026-07-10.md  Makefile  README.md  REFACTOR_REPORT.md  alembic.ini  codecov.yml  deploy.sh  docker-compose.local.yml  docker-compose.master.yml  docker-compose.slave.yml  docker-compose.yf-backup.yml  docker-compose.yf-node.yml  docker-compose.yfinance.yml  docker-compose.yml  docker-publish.yml  dump.rdb  lint.yml  package-lock.json  package.json  pnpm-lock.yaml  prometheus.yml  pyproject.toml  quant-agent-dashboard.json  quant.conf  start.sh
.codebuddy/plans/: macro-zero-cost-stack-reorg_6dbeb23f.md
.cursor/rules/: vibe-coding.mdc
.github/ISSUE_TEMPLATE/: architecture-review.md  epic-opt.md  task-opt.md
.github/workflows/: backend.yml  data-subservice.yml  eval.yml  frontend.yml  security.yml
.memory/: session.json
.qoder/plans/: 修复_CI_测试失败_c1ed2eeb.md
backend/: __init__.py  main.py  slave_app.py  test_fixes.sh  test_quality_check.py  unused_import_test.py  worker.py  yfinance_worker.py
backend/alembic/: env.py
backend/app/: __init__.py  backtest_app.py  broker.py  grid_search_app.py  market_data.py  market_data_app.py  monte_carlo_app.py  oms_app.py  overfit_app.py  system_app.py  walk_forward_app.py
backend/backtest/: __init__.py  strategies.py
backend/bootstrap/: __init__.py  lifecycle.py
backend/core/: __init__.py  alert_models.py  backtest_engine.py  circuit_breaker.py  circuit_breaker_integration.py  config.py  database.py  datalake_models.py  encryption.py  error_codes.py  exception_handlers.py  exceptions.py  graceful_executor.py  kline_cache.py  logger.py  market_correctness.py  market_engine.py  metrics.py  middleware.py  models.py  openapi_schema.py  otel_config.py  redis_client.py  response.py  retry_utils.py  security.py  utils.py  (+4 more)
data_subservice/: Dockerfile  __init__.py  finnhub_worker.py  main.py  routes.py  yfinance_worker.py
docs/: 01. 产品功能与UIUE架构.md  02. Vibe Coding与AI工程规范.md  03. 后端架构与执行引擎.md  04. 前端架构与零GC渲染.md  05. 客户端架构与Tauri壳资源.md  06. 工程化配置与部署方案.md  07. 子系统架构速查手册.md  08. 日志与可观测性规范.md  09. 性能测试规范.md  10. API接口规范.md  11. 数据模型与领域设计.md  12. 运维手册与应急预案.md  13. 质量评估体系.md  14. 分布式数据源服务架构.md  15. 回测实盘同构引擎设计.md  16. 策略实验室完整架构.md  17. 纸面组合系统架构.md  18. 多通道推送路由设计.md  19. Parquet数据湖快照版本化设计.md  20. 前端视觉设计规范.md  21. 专家团多智能体协作系统.md  22. Agent 工具链稳定性保障体系.md  ADR-007-flutter-kline-custompainter.md  ARCH-03_IMPLEMENTATION_PLAN.md  ARCHITECTURE_REVIEW.md  CLIENT_ARCHITECTURE_REVIEW.md  CODE_QUALITY_GATE.md  EPIC-003_FINAL_REPORT.md  EPIC-004_NUMBA_ASSESSMENT.md  EPIC_3_4_PROJECT_SUMMARY.md  HOOK_INSTALLATION_EXPERIENCE.md  IMPLEMENTATION_TRACKING_TOOL_HEALTH.md  MASTER_REVIEW.md  PHASE2_FINAL_REPORT.md  PLAN.md  PRODUCT_UI_REVIEW.md  README.md  TODO.md  VIBE_CODING_COMMIT_RULES.md  openapi.json  (+1 more)
frontend/: .eslintrc.cjs  .prettierignore  .prettierrc  Dockerfile  README.md  eslint.config.js  index.html  next.config.mjs  nginx.conf  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts  wrangler.toml
hermes_agent/: __init__.py  agent.py  tool_registry.py  tool_result_cache.py
logs/: error.log.2026-06-11  error.log.2026-06-12  error.log.2026-06-13  error.log.2026-06-14  error.log.2026-06-15  info.log.2026-06-11  info.log.2026-06-12  info.log.2026-06-13  info.log.2026-06-14  info.log.2026-06-15  warning.log.2026-06-11  warning.log.2026-06-12  warning.log.2026-06-13  warning.log.2026-06-14  warning.log.2026-06-15
prompts/: README.md
scripts/: benchmark_dsl_parser.py  clear_cache.py  export_all_tickers.py  export_openapi.py  final_integration_test_real_data.py  fix_linter_issues.sh  futu_fetch.py  init_vector_store.py  locust.conf  locust_ws_stress.py  memory_profiler.py  migrate_screener_subs.py  probe_backend_health.py  run_cli.py  start_all.py  sync_minute_data.py  test_akshare_news.py  test_all_services.py  test_cluster_local.py  test_finnhub_dashboard_data.py  test_finnhub_permissions.py  test_finnhub_rest_news.py  test_finnhub_ws_news.py  test_fred.py  test_futu_advanced_params.py  test_futu_advanced_screener.py  test_futu_screen_direct.py  test_google_search.py  test_local_cluster.sh  test_logger.py  test_macro.py  test_macro_data.py  test_screener.py  test_screener_cases.py  test_screener_fix_summary.py  test_screener_nlp.py  test_screener_validation.py  test_tavily_search.py  test_tech_api.py  test_yf.py  (+7 more)
tempo/: tempo.yaml
(+811 files in other folders)
