[project]
name = "quant-agent"
version = "0.1.0"
description = "Quant Agent - 资深量化交易架构师与自动化执行主脑"
requires-python = ">=3.11"
dependencies = [
    # Agent & LLM
    "openai>=1.14.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    # Quant & API
    "futu-api>=10.7.0",
    "yfinance>=0.2.36",
    "pandas>=2.0.0",
    "httpx>=0.27.0",
    "tenacity>=8.2.0",
    "akshare>=1.1.15",
    "numba>=0.59.0",
    # Document Parsers
    "pdfplumber>=0.10.0",
    # API Backend
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "prometheus-client>=0.20.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.25",
    "pydantic-settings>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "bcrypt>=4.1.2",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "google-auth>=2.28.0",
    "requests>=2.31.0",
    # Search & NLP & Vector DB
    "duckduckgo-search>=5.0.0",
    "frozendict>=2.4.0",
    "jieba>=0.42.1",
    "rank-bm25>=0.2.2",
    "chromadb>=0.4.24",
    "sentence-transformers>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
# 默认单行最大长度为 88
line-length = 88
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
]

[tool.ruff.lint]
# 启用 Pyflakes (F), pycodestyle (E, W) 和 isort (I 自动排序导入)
select = ["E", "F", "W", "I"]

[tool.ruff.format]
# 使用与 Black 一致的格式化风格
quote-style = "double"